챗유틸 통합 + notification